force-app/main/default/objects/DSales_Asignacion_de_Productos__c/DSales_Asignacion_de_Productos__c.object-meta.xml
<CustomObject>
    <label>Asignación de Productos</label>
    <nameField>
        <label>Nombre de Asignación de Productos</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Asignaciones de Productos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>