force-app/main/default/objects/DSales_Asignacion_de_Productos__c/fields/DSALES_Departamento__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Departamento__c</fullName>
    <formula>DSales_Servicio_Seguro__r.DSALES_Categoria__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Categoría</label>
    <type>Text</type>
</CustomField>