force-app/main/default/objects/DSales_Asignacion_de_Productos__c/fields/DSales_NombreProducto__c.field-meta.xml
<CustomField>
    <fullName>DSales_NombreProducto__c</fullName>
    <formula>IF( ISPICKVAL( DSales_Servicio_Seguro__r.DSales_Tipo_de_Producto__c , &quot;Producto&quot;) , DSales_Servicio_Seguro__r.DSales_Articulo__c + &quot; &quot; + DSales_Servicio_Seguro__r.DSales_Marca__c + &quot; &quot; + DSales_Servicio_Seguro__r.DSales_Modelo__c,  DSales_Servicio_Seguro__r.DSales_Articulo__c )</formula>
    <label>Nombre del Producto</label>
    <type>Text</type>
</CustomField>