force-app/main/default/objects/DSales_Asignacion_de_Productos__c/fields/DSales_Producto__c.field-meta.xml
<CustomField>
    <fullName>DSales_Producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Servicio</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.DSales_Tipo_de_Producto__c</field>
            <operation>equals</operation>
            <value>Servicio</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Asignaciones de Productos</relationshipLabel>
    <relationshipName>Asignaciones_de_Productos</relationshipName>
    <type>Lookup</type>
</CustomField>