force-app/main/default/objects/DSales_Asignacion_de_Productos__c/fields/DSALES_Subcategoria__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Subcategoria__c</fullName>
    <formula>DSales_Producto__r.DSALES_SubCategoria__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub categoría</label>
    <type>Text</type>
</CustomField>