force-app/main/default/objects/DSales_Asignacion_de_Productos__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DSales_Servicio_Seguro__c</columns>
    <columns>DSales_Producto__c</columns>
    <columns>DSALES_SKU__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>DSALES_Activo__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DSALES_Activo__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Todos</label>
</ListView>